adding edits to ghana page

--- a/wedding/ghana.html
+++ b/wedding/ghana.html
@@ -65,7 +65,9 @@
                     <div class="col-md-12">
                         <p>
                             <strong>Ghana:</strong> Imagine a vibrant country on the west coast of Africa. It's
-                            officially called the Republic of Ghana.
+                            officially called the Republic of Ghana. The official language is English and it was a
+                            former British Colony. There are many local (tribal) languages most popular of which is Twi
+                            (pronounced like "twee", rhymes with "tree").
                         </p>
                         <p>
                             <strong>Population:</strong> Ghana has a population of around 34 million people.
@@ -75,7 +77,10 @@
                             African country to gain independence (in 1957). It's also known for its rich history,
                             including the ancient Ashanti Kingdom and its gold coast era. You might have heard of its
                             beautiful beaches, national parks teeming with wildlife, and its friendly and welcoming
-                            people. It's also a major producer of cocoa.
+                            people. It's also a major producer of cocoa. It is a costal country and has some of the
+                            historical
+                            British
+                            castles and slave ports; a haven for tourists and a home or rich black/african culture.
                         </p>
                         <p>
                             <strong>Top Exports:</strong> Ghana's main exports include gold, cocoa beans and cocoa
@@ -88,7 +93,7 @@
                             groups, each with its own unique language, customs, and traditions. Family plays a very
                             important role in Ghanaian society.
                         </p>
-                        <h4>Akan/Ashanti Marriage (Perspective/High Level) and Tradition</h4>
+                        <h4>Akan Marriage and Tradition</h4>
                         <p>
                             The Akan people, including the Ashanti and Fante (Michael’s tribe), have a rich and
                             significant tradition surrounding marriage. From their perspective, marriage isn't just
