--- a/wedding/ghana.html
+++ b/wedding/ghana.html
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p>
-                            <strong>Ghana:</strong> Imagine a vibrant country on the west coast of Africa. It's
+                            <strong>Ghana:</strong> A vibrant country on the west coast of Africa. It's
                             officially called the Republic of Ghana. The official language is English and it was a
                             former British Colony. There are many local (tribal) languages most popular of which is Twi
                             (pronounced like "twee", rhymes with "tree").
