year of return added

--- a/wedding/ghana.html
+++ b/wedding/ghana.html
@@ -64,8 +64,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p>
-                            <strong>Ghana:</strong> A vibrant country on the west coast of Africa. It's
-                            officially called the Republic of Ghana. The official language is English and it was a
+                            <strong>Ghana:</strong> A vibrant country on the west coast of Africa. The official language
+                            is English because it is a
                             former British Colony. There are many local (tribal) languages most popular of which is Twi
                             (pronounced like "twee", rhymes with "tree").
                         </p>
@@ -93,6 +93,15 @@
                             groups, each with its own unique language, customs, and traditions. Family plays a very
                             important role in Ghanaian society.
                         </p>
+                        <p>
+                            <strong>Recently known for:</strong> Ghana's "Year of Return" in 2019 marked 400 years since
+                            the first enslaved Africans arrived in the United States, significantly boosting tourism and
+                            inviting the diaspora to reconnect with their heritage. Additionally, December in Ghana,
+                            often called "Detty December," has become a major cultural and festive highlight, drawing
+                            visitors from around the world with vibrant celebrations, music festivals, and a strong
+                            sense of African identity.
+                        </p>
+
                         <h4>Akan Marriage and Tradition</h4>
                         <p>
                             The Akan people, including the Ashanti and Fante (Michael’s tribe), have a rich and
@@ -222,6 +231,11 @@
                             is given her bag of items for her new home. This entire process underscores the communal
                             nature of marriage in Akan/Ashanti culture, highlighting the union of two families rather
                             than just two individuals.
+                        </p>
+
+                        <h4></h4>
+                        <p>
+
                         </p>
                     </div>
                 </div>
