--- a/wedding/ghana.html
+++ b/wedding/ghana.html
@@ -94,7 +94,7 @@
                             important role in Ghanaian society.
                         </p>
                         <p>
-                            <strong>Recently known for:</strong> Ghana's "Year of Return" in 2019 marked 400 years since
+                            <strong>Now popular for:</strong> Ghana's "Year of Return" in 2019 marked 400 years since
                             the first enslaved Africans arrived in the United States, significantly boosting tourism and
                             inviting the diaspora to reconnect with their heritage. Additionally, December in Ghana,
                             often called "Detty December," has become a major cultural and festive highlight, drawing
@@ -231,11 +231,6 @@
                             is given her bag of items for her new home. This entire process underscores the communal
                             nature of marriage in Akan/Ashanti culture, highlighting the union of two families rather
                             than just two individuals.
-                        </p>
-
-                        <h4></h4>
-                        <p>
-
                         </p>
                     </div>
                 </div>
