--- a/wedding/program.html
+++ b/wedding/program.html
@@ -325,7 +325,7 @@
               <div class="timeline-item">
                 <div class="timeline-content">
                   <h4 class="timeline-title">6:00 PM</h4>
-                  <p>Bridal Party and Family Announced In</p>
+                  <p>Bridal Party/Family Announced-In</p>
                 </div>
               </div>
               <div class="timeline-item">
@@ -349,7 +349,7 @@
               <div class="timeline-item">
                 <div class="timeline-content">
                   <h4 class="timeline-title">6:20 PM</h4>
-                  <p>Ritz Event Manager Unlock Groom's Room for Couple to Change Outfits</p>
+                  <p>Ritz Event Manager: Groom's Room for Couple</p>
                 </div>
               </div>
               <div class="timeline-item">
@@ -384,7 +384,7 @@
               </div>
               <div class="timeline-item">
                 <div class="timeline-content">
-                  <h4 class="timeline-title">10:00 PM</h4>
+                  <h4 class="timeline-title">9:30 PM</h4>
                   <p>Bar Closes</p>
                 </div>
               </div>
