hide traditional wedding

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -587,7 +587,7 @@
           </div>
         </div>
 
-        <div class="col-md-4" id="ghanatraditionalwedding">
+        <!-- <div class="col-md-4" id="ghanatraditionalwedding">
           <a target="_blank" href="ghana.html">
             <div class="work-box">
               <div class="work-img">
@@ -608,7 +608,7 @@
               </div>
             </div>
           </a>
-        </div>
+        </div> -->
 
         <div class="col-md-4" id="registry">
           <a target="_blank" href="https://account.venmo.com/pay?recipients=emilyaffare">
