updated resume and cover image

--- a/index.html
+++ b/index.html
@@ -821,16 +821,14 @@
           <div class="col-md-4">
             <div class="work-box">
               <div class="work-img">
-<!--                 <a href="https://www.youtube.com/embed/43bvKZqoAuE?si=xxmarG1QOrikb7Ja"" target=" _blank"> -->
- <a href="http://streakwords.com/"" target=" _blank"> 
-                  <img
+                <a href="https://www.youtube.com/embed/43bvKZqoAuE?si=xxmarG1QOrikb7Ja"" target=" _blank"><img
                     src="assets/img/projects/subanagram.jpg" alt="" class="img-fluid">
                 </a>
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h2 class="w-title">StreakWords (ongoing)</h2>
+                    <h2 class="w-title">SubAnagram (ongoing)</h2>
                     <div class="w-more">
                       <span class="w-date">November 2022</span>
                     </div>
