--- a/index.html
+++ b/index.html
@@ -114,45 +114,26 @@
                   <div class="skill-mf">
                     <p class="title-s">Skills</p>
                     <ul>
-                      <li><b>Languages:</b> Python, Java, SQL (T-SQL, PL-SQL)</li>
+                      <li><b>Languages:</b> Python, SQL, Java</li>
+                      <li><b>BI & Visualisation:</b> Tableau, Power BI, Looker, Report Development, IT Automation</li>
+                      <li><b>Databases:</b> Oracle, Microsoft SQL Server, PostgreSQL, MongoDB, Redis, Neo4j, Cassandra,
+                        Data Lake, Data Governance</li>
+                      <li><b>Cloud:</b> AWS (Glue, S3, EC2, Redshift, Snowflake, Athena), Azure, Databricks, Google
+                        Cloud Platform (GCP)</li>
+                      <li><b>Data Processing:</b> ETL, Data Warehouse, Data Modeling, CI/CD, Spark, Airflow, Generative
+                        AI Prompt Engineering, MCP, RAG, Excel</li>
+                      <li><b>Other:</b> Linux, Process Automation, Technical Documentation, Product & Project Management
                       </li>
-                      <li><b>Cloud:</b> AWS <i class="fa-solid fa-certificate"></i> (S3, EC2, RDS, DynamoDB, IAM,
-                        Route53, Glue, Athena)
-                        , Google Cloud (Big
-                        Query,
-                        Cloud Run, SQL, Looker)</li>
-                      <li><b>Analytics:</b> Tableau, NumPy, Pandas, Restful API, Spark, Hadoop, Excel, TensorFlow,
-                        Scikit-learn, Keras, Cypher Query Language</li>
-                      <li><b>General Skills:</b> Linux, ETL, AI Prompt Engineering, Process automation,
-                        Digital
-                        Transformation, Technical Documentation</li>
                     </ul>
-                    <div class="progress">
-                    </div>
-                    <p class="title-s">Tools</p>
-                    <ul>
-                      <li><b>Databases:</b> Microsoft SQL Server, Oracle 21g <i class="fa-solid fa-certificate"></i>
-                        , MySQL, NoSQL (MongoDB, Redis, Cassandra, Neo4j <i class="fa-solid fa-certificate"></i>
-                        )
-                      <li><b>Visualization:</b> Tableau, Python Libraries</li>
-                      <li><b>Automation:</b> SQL (Procedures, jobs, triggers), Selenium, PowerAutomate, Linux Crontab,
-                        Microsoft Task Scheduler,</li>
-                      <li><b>Mobile app development:</b> Flutter, PowerApps, Android Native (Java)</li>
-                    </ul>
-                    <div class="progress">
-                    </div>
-                    <p class="title-s">Software</p>
-                    <span>Postman, Wireshark, Jira, PyCharm, Jupyter, Android Studio, VS Code, Canva, Microsoft
-                      Office</span>
-                    <span class="pull-right"></span>
-                    <div class="progress">
-                    </div>
+                    <div class="progress"></div>
+                    <p class="title-s">Tools & Software</p>
+                    <span>Git/GitHub, Jira/Asana, Postman, Wireshark, PyCharm, Jupyter, VS Code, Tableau, Power BI,
+                      Looker, Excel</span>
+                    <div class="progress"></div>
                     <p class="title-s">Domains</p>
-                    <span>Data Engineering/Analytics, Cloud Solutions Architect <i class="fa-solid fa-certificate"></i>,
-                      Database Development/Management</span>
-                    <span class="pull-right"></span>
-                    <div class="progress">
-                    </div>
+                    <span>Data & Analytics, Cloud Architecture, Performance Reporting, Process Improvement, Security &
+                      Governance</span>
+                    <div class="progress"></div>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -165,40 +146,22 @@
                     </div>
 
                     <p class="lead">
-                      Hello!
-                      I'm Michael Affare, a Computer Engineer with a Master's degree in Information Systems Management
-                      from Carnegie Mellon University. I am currently leading a Data Analytics team at Great Lakes
-                      Behavioral Research Institute and consulting as a Cloud Solutions Architect for the CMU research
-                      team at the Block Center for Technology & Society.
+                      I bring 8 years of experience as a data professional and cloud solutions architect, enabling
+                      digital transformation with modern cloud and AI technologies delivered to industry and security
+                      standards. I design secure, scalable analytics systems that unlock actionable insights and improve
+                      decision‑making, performance reporting, and process efficiency.
                     </p>
                     <p class="lead">
-                      I take pride in having managed large scale distributed technical projects on 3 continents.
-                    <ul>
-                      <li><b>In Africa (Ghana)</b>
-                        I led technical projects in the telecommunications space during the merger of Airtel and Tigo.
-                        I led projects with vendors like Ericsson, Huawei, Meta and managed integrations with banks
-                        (Barclays) and mobile financial services. I also led the AirtelTigo team on the National
-                        Communication Authority committee during the Ghana National Sim Reregistration Exercise that
-                        resulted in the reduction of mobile fraud by 60%.</li>
-                      <li><b>In Australia</b>
-                        I worked with Freshtrack Systems using database development and data analytics to support
-                        stakeholders
-                        in the fresh food supply chain industry (from the farm to the shelves).</li>
-                      <li>
-                        <b>In the United States</b>
-                        I am consulting for the Allegheny County Department of Human Services using data analytics to
-                        drive data-driven policy decisions whiles contributing to research on WorkForce Mobility and
-                        labour
-                        analytics at CMU.
-                      </li>
-                    </ul>
+                      I’ve led end‑to‑end data and product initiatives across telecommunications, public sector, supply
+                      chain, and research—partnering with cross‑functional teams to turn messy data into practical,
+                      high‑impact solutions. Known as a collaborative, growth‑minded teammate, I learn quickly, plan
+                      carefully, and focus on measurable outcomes.
                     </p>
                     <p class="lead">
-                      My passion is to support businesses with digital transformation solutions
-                      that are automatable and leverage data analytics solutions to help improve productivity.
-                      I am a continuous learner and passionate about technical projects that improve optimization and
-                      data-driven decision-making.
-
+                      Recent highlights include: modernizing analytics operations supporting $170M+ in annual program
+                      decisions, automating multi‑partner ETL pipelines, launching self‑service BI environments with
+                      role‑based access, and advancing data governance and predictive risk modeling to improve outreach
+                      and engagement.
                     </p>
                   </div>
                 </div>
@@ -349,9 +312,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-10">
-                    <h2 class="w-title">BI, Application Support Analyst</h2>
+                    <h2 class="w-title">Application Support Analyst (Part-time)</h2>
                     <div class="w-more">
-                      <span class="w-date">Apr. 2021 - Aug. 2023</span>
+                      <span class="w-date">Apr. 2022 - Aug. 2022</span>
                     </div>
                   </div>
                   <!-- <div class="col-sm-4">
@@ -374,7 +337,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h2 class="w-title">Consumer Solutions Architect, <br> Business Solutions Architect</h2>
+                    <h2 class="w-title">Senior Consumer Solutions Architect</h2>
                     <div class="w-more">
                       <span class="w-date">May. 2017 - Aug. 2022</span>
                     </div>
@@ -1064,14 +1027,46 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="work-img">
+                <img src="assets/img/Certi/google.jpg" alt="Google Advanced Data Analytics" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <h2 class="w-title">Advanced Data Analytics Professional (Google)</h2>
+                <p class="w-ctegory">Issued Aug 2025</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="work-img">
+                <img src="assets/img/Certi/google.jpg" alt="Google Business Intelligence" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <h2 class="w-title">Business Intelligence Professional (Google)</h2>
+                <p class="w-ctegory">Issued Jul 2025</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="work-img">
+                <img src="assets/img/Certi/comptiasecurityplus.png" alt="CompTIA CySA+" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <h2 class="w-title">CompTIA CySA+</h2>
+                <p class="w-ctegory">Issued Apr 2025</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="work-img">
                 <a href="https://www.credly.com/badges/df40be27-9776-4a48-afce-36969f34f0b7/public_url"
-                  target="_blank"><img src="assets/img/Certi/comptiasecurityplus.png" alt="" class="img-fluid"></a>
+                  target="_blank"><img src="assets/img/Certi/comptiasecurityplus.png" alt="CompTIA Security+"
+                    class="img-fluid"></a>
               </div>
               <div class="work-content">
                 <h2 class="w-title">CompTIA Security+</h2>
-                <p class="w-ctegory">
-                  Issued May 2024
-                </p>
+                <p class="w-ctegory">Issued May 2024</p>
               </div>
             </div>
           </div>
@@ -1112,13 +1107,12 @@
             <div class="service-box">
               <div class="work-img">
                 <a href="https://www.credly.com/badges/930570b6-9d9c-48f3-9cc5-c958939df96d/public_url"
-                  target="_blank"><img src="assets/img/Certi/awscloudpractitioner.jpg" alt="" class="img-fluid"></a>
+                  target="_blank"><img src="assets/img/Certi/awscloudpractitioner.jpg" alt="AWS Cloud Practitioner"
+                    class="img-fluid"></a>
               </div>
               <div class="work-content">
                 <h2 class="w-title">AWS Cloud Practitioner</h2>
-                <p class="w-ctegory">
-                  Issued October 2023
-                </p>
+                <p class="w-ctegory">Issued Sep 2023</p>
               </div>
             </div>
           </div>
@@ -1291,6 +1285,7 @@
                       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=aaffare@gmail.com" target="_blank">
                         <li><span class="ion-email"></span>aaffare@gmail.com</li>
                       </a>
+                      <li><span class="ion-ios-telephone"></span>+1 412 983 3254</li>
                     </ul>
                   </div>
                   <div class="socials">
